--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ rt_async-std_1 = ["deadpool/rt_async-std_1", "arangors/surf_async"]
 serde = ["deadpool/serde", "serde_1"]
 
 [dependencies]
-deadpool = { git = "https://github.com/bikeshedder/deadpool", default-features = false, features = ["managed"] }
+deadpool = { git = "https://github.com/bikeshedder/deadpool", rev = "a4953479c477cdd22a0988a33b4a777d5cc2ec85", default-features = false, features = ["managed"] }
 arangors = { git = "https://github.com/fMeow/arangors", default-features = false, features = ["rocksdb"] }
 serde_1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }
 url = "2.2"
