--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = ["deadpool/serde", "serde_1"]
 
 [dependencies]
 deadpool = { git = "https://github.com/bikeshedder/deadpool", rev = "a4953479c477cdd22a0988a33b4a777d5cc2ec85", default-features = false, features = ["managed"] }
-arangors = { git = "https://github.com/fMeow/arangors", default-features = false, features = ["rocksdb"] }
+arangors = { git = "https://github.com/fMeow/arangors", branch = "main", default-features = false, features = ["rocksdb"] }
 serde_1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }
 url = "2.2"
 
